fix filter.png position on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@
 }
 
 .filterKung{
-  margin-left: 10px;
+  margin-left: 15px;
   margin-top: 10px;
   width:20px;
   height: 20px;
